# KitsBlips

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  content.cmake  copy-and-run.sh  rebuild-all.sh  setup-all.sh  style.md
clap/: CMakeLists.txt  README.md
clap/assets/: base.frag  kitskeys.glb
clap/cmake/: add_bundle.cmake  glad.cmake  imgui.cmake
clap/src/: audio.h  descriptor.h  entry.cpp
clap/src/chorus/: chorus.cpp  chorus.h
clap/src/clapApi/: basePlugin.cpp  basePlugin.h  common.h  effectPlugin.cpp  effectPlugin.h  instrumentPlugin.cpp  instrumentPlugin.h  pluginHost.cpp  pluginHost.h
clap/src/clapeze/: basePlugin.cpp  basePlugin.h  common.h  effectPlugin.h  instrumentPlugin.h  pluginHost.cpp  pluginHost.h  voice.h
clap/src/crunch/: crunch.cpp  crunch.h
clap/src/distort/: distort.cpp  distort.h
clap/src/example/: example.cpp  example.h
clap/src/freqshift/: freqshift.cpp  freqshift.h
clap/src/gui/: debugui.h  feature.cpp  feature.h  gui.cpp  imgui.cpp  imgui.h  imguiHelpers.h  kitguiFeature.cpp  kitguiFeature.h  knob.cpp  knob.h  mesh.cpp  mesh.h  scene3d.cpp  scene3d.h  sdlImgui.cpp  sdlImgui.h  sdlOpenGl.cpp  sdlOpenGl.h  shaders.cpp  shaders.h
clap/src/harmonizer/: harmonizer.cpp  harmonizer.h
clap/src/keysynth/: keysynth.cpp
clap/src/plugin/: PluginHost.cpp  plugin.cpp  plugin.h
clap/src/sines/: sines.cpp  sines.h
clap/src/snecho/: plugin.cpp  plugin.h  snecho.cpp  snecho.h
clap/src/template/: plugin.cpp  plugin.h
clap/src/tester/: tester.cpp
clap/template/: CMakeLists.txt
clap/template/include/: PluginHost.h  gui.h
clap/template/src/: audio.cpp  gui.cpp  plugin.cpp
clap/test/: gui.test.cpp
clapeze/: .gitignore  CMakeLists.txt  README.md
clapeze/cmake/: content.cmake  target_add_bundle.cmake
clapeze/docs/guides/: host-testing.md
clapeze/docs/intro/: assets.md  bring-your-own-gui.md  effects.md  instruments.md  migrations.md  parameters.md  plugin-registration.md  plugin-structure.md  processor.md  under-the-hood.md
clapeze/docs/thoughts/: clap-first.md  goals.md  no-gui.md
clapeze/examples/: clapeze_export_generated.h  descriptor.h  effectExample.cpp  entry.cpp  instrumentExample.cpp
clapeze/examples/crunch/: crunch.cpp
clapeze/examples/sines/: sines.cpp
clapeze/include/clapeze/: basePlugin.h  baseProcessor.h  common.h  effectPlugin.h  entryPoint.h  instrumentPlugin.h  pluginHost.h  streamUtils.h  stringUtils.h  transport.h  voice.h
clapeze/src/: basePlugin.cpp  entryPoint.cpp  pluginHost.cpp
clapeze/src/ext/: assets.cpp  parameterConfigs.cpp  presets.cpp
clapeze/src/features/: assetsFeature.cpp  presetFeature.cpp  presets.cpp
clapeze/src/params/: dynamicParameters.cpp  dynamicParametersFeature.cpp  enumParametersFeature.cpp  parameterTypes.cpp
clapeze/src/state/: tomlImplementation.cpp
clapeze/test/: CMakeLists.txt  effect.test.cpp  factory.test.cpp  instrument.test.cpp  mockHost.h  params.test.cpp  transport.test.cpp
clapeze/tools/: createZip.cpp
daisy/: CMakeLists.txt  README.md  copy-template.sh  program.sh
daisy/ExampleFirmware/: CMakeLists.txt
daisy/ExampleFirmware/src/: test.cpp
daisy/adsr/: CMakeLists.txt  README.md  adsr.cpp
daisy/calibrate/: CMakeLists.txt  README.md  calibrate.cpp  calibration.txt
daisy/crunch/: CMakeLists.txt  README.md  crunch.cpp
daisy/follow/: CMakeLists.txt  follow.cpp
daisy/fourstep/: CMakeLists.txt  README.md  fourstep.cpp
daisy/psxverb/: CMakeLists.txt  README.md  psxverb.cpp
daisy/psxverb/dsp/: psx.cpp  psx.h  resampler.cpp
daisy/quantize/: CMakeLists.txt  README.md  ScaleQuantizer.h  quantize.cpp
daisy/shared/include/: util.h
daisy/snecho/: CMakeLists.txt  README.md  snecho.cpp
daisy/snecho/dsp/: resampler.h  snes.cpp  snes.h  util.h
daisy/sum/: CMakeLists.txt  README.md  sum.cpp
daisy/template/: CMakeLists.txt  README.md  template.cpp
daisy/vca/: CMakeLists.txt  README.md  vca.cpp
daisy/vco/: CMakeLists.txt  README.md  vco.cpp
daw/: CMakeLists.txt  README.md  pack-meshes.sh  sentry-upload.sh
daw/assets/: kitskeys.glb  kitskeys.packed.glb
daw/assets/kitsblips.kitskeys/: airglow.preset
daw/cmake/: asset-processors.cmake  sentry.cmake
daw/src/: entry.cpp
daw/src/chorus/: chorus.cpp
daw/src/disperser/: disperser.cpp
daw/src/distort/: distort.cpp
daw/src/example/: example.cpp
daw/src/filters/: filters.cpp
daw/test/: CMakeLists.txt  basic.test.cpp  gui.test.cpp
dsp/: CMakeLists.txt
dsp/include/: psxReverb.h  resampler.h  snesEcho.h
dsp/src/: dsfOscillator.cpp  psxReverb.cpp  resampler.cpp  snesEcho.cpp
juce/ExamplePlugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
kicad/: .gitignore  (+1 more)
kitdsp/: CMakeLists.txt  README.md  style.md
kitdsp-gpl/: CMakeLists.txt  README.md
kitdsp-gpl/test/: CMakeLists.txt  pitch.test.cpp
kitdsp/src/: chorus.cpp  disperser.cpp  dsfOscillator.cpp  frequencyShifter.cpp  grainPlayer.cpp  harmonizer.cpp  psxReverb.cpp  resampler.cpp  snesBitcrush.cpp  snesEcho.cpp
kitdsp/test/: CMakeLists.txt  README.md  blepOscillator.test.cpp  chorus.test.cpp  dsfOscillator.test.cpp  frequencyShifter.test.cpp  grainPlayer.test.cpp  harmonizer.test.cpp  naiveOscillator.test.cpp  oscillatorSweeps.test.cpp  pitch.test.cpp  psxReverb.test.cpp  snesEcho.test.cpp  spectrograms.sh  trapfpe.cpp  util.h  wavFile.test.cpp
kitgui/: CMakeLists.txt  CmakePresets.json  README.md
kitgui/assets/: duck.glb  embedded.conf  suzanne.basis.glb
kitgui/cmake/: asset-cook.cmake  imgui.cmake  pugl.cmake
kitgui/examples/: 3dscene.cpp  3dviewer.cpp  CMakeLists.txt  demo.cpp  filepicker.cpp  imageviewer.cpp  imguiDemo.cpp  immediatemode.cpp  multiwindow.cpp
kitgui/src/: app.cpp  context.cpp  fileContext.cpp  fileContext.h  imguiExt.cpp  imguiExt.h  kitgui.cpp  log.h  scene3d.cpp  scene3d.h  shaders.cpp
vcvrack/: CMakeLists.txt  README.md  RackSDK.cmake  exportsvgs.py  helper.py  plugin.json
vcvrack/res/: README.md
vcvrack/src/: dance.cpp  dsf.cpp  plugin.cpp  plugin.hpp  psxverb.cpp  snecho.cpp  snecho_old.cpp
(+426 files in other folders)
